<resources>
    <string name="app_name">MyDict</string>
    <string name="category_name">Phrasal verbs</string>
    <string name="category_words_count">296 word(-s)</string>
    <string name="category_progress_img">progress</string>
    <string name="category">Category</string>
    <string name="textview">TextView</string>
    <string name="translate">Translate</string>
    <string name="word">word</string>
    <string name="add_a_word">Add a word</string>
    <string name="add_new_word">ADD NEW WORD</string>
    <string name="add_a_category">Add a category</string>
    <string name="add_new_category">ADD</string>


    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="examples">Examples:</string>
    <string name="word_detail_translate">Translate:</string>
    <string name="name">Name:</string>
    <string name="details">Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_category">Add Category</string>
    <string name="play_game">Play game</string>
    <string name="add_word">Add Word</string>


</resources>